# Smart-Crop-Management

./: CONTRIBUTING.md  Dockerfile  HOW_TO_RUN.txt  README.md  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
agents/: baseline_agent.py  rl_agent.py
api/: __init__.py  llm_proxy.py  main.py
irrigation_env/: __init__.py  env.py  grader.py  reward.py  simulator.py  tasks.py
server/: app.py
tasks/: __init__.py  graders.py
tasks/__pycache__/: __init__.cpython-314.pyc.1710394881584  graders.cpython-314.pyc.1710394881872
tests/: test_env.py
ui/: dashboard.html
untitled folder/: Dockerfile
