[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-crop-management-sytem"
version = "1.0.0"
description = "OpenEnv-compatible environment + FastAPI demo for smart crop irrigation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
  "fastapi>=0.104",
  "uvicorn>=0.24",
  "pydantic>=2.0",
  "gymnasium>=0.29",
  "numpy>=1.24",
  "openai>=1.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

